--- a/contributedCode/cloud_gov_shiny/simple_epa_app_twofile/r.yml
+++ b/contributedCode/cloud_gov_shiny/simple_epa_app_twofile/r.yml
@@ -1,6 +1,6 @@
 ---
 packages: 
-  - cran_mirror: https://cran.r-project.org
+  - cran_mirror: https://cloud.r-project.org
     num_threads: 4
     packages:
       - name: praise
